--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,7 @@
             "contribute/latest:latest"
         ],
         "play": [
+            "play/6.7.0.0:6.7.0.0",
             "play/6.7.0.0-rc1:6.7.0.0-rc1",
             "play/6.7.0.0-rc2:6.7.0.0-rc2",
             "play/6.7.0.0-rc3:6.7.0.0-rc3",
@@ -187,6 +188,7 @@
             "play/5.2.21:5.2.21"
         ],
         "dev": [
+            "dev/6.7.0.0:6.7.0.0",
             "dev/6.7.0.0-rc1:6.7.0.0-rc1",
             "dev/6.7.0.0-rc2:6.7.0.0-rc2",
             "dev/6.7.0.0-rc3:6.7.0.0-rc3",
